overall design and content

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -14,12 +14,12 @@
 
 $primary   : #1976D2;
 $secondary : #26A69A;
-$accent    : #9C27B0;
+$accent    : #8325fd;
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+$dark      : #1e1b1e;
+$dark-page : #0f0f0f;
 
-$positive  : #21BA45;
-$negative  : #C10015;
+$positive  : #00c39a;
+$negative  : #fe6d79;
 $info      : #31CCEC;
-$warning   : #F2C037;
+$warning   : #ffbf3c;
